Feat: adding getEventById, deleteById and adding javadocs to classes
